# plumed2

./: .travis.yml
.github/workflows/: linuxWF.yml  w64.yml
.travis/: plumedbot
conda/: run-conda-upload.sh
conda/recipe/: build.sh  meta.yaml
conda/w64/: meta.yaml
docker/: fedora39-pycv  rocky8-pycv
plugins/pycv/: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
plugins/pycv/pythontests/: mypycv.py  test_cv.py  test_cv_calls.py  test_run.py
plugins/pycv/regtest/: scripts
plugins/pycv/src/: PlumedPythonEmbeddedModule.cpp  PythonCVInterface.cpp
plugins/pycv/src/pycv/: __init__.py
user-doc/: extract
w64/: bld.bat  meta.yaml
